# angry_cuisine_nerd

./: .gitignore  Makefile  README.md  angry_cuisine_nerd.opam  dune-project  ideas.org  index.html  index.md
.github/workflows/: deploy.yaml
attic/to_validate/: carbonade_flamande.org
css/: style.css
recipes/: brocoli_carottes.html  brocoli_carottes.md  brocoli_vapeur.html  brocoli_vapeur.md  brocoli_vapeur.org  canelés.html  canelés.md  template.org  veloute_brocoli.html  veloute_brocoli.md  velouté_brocoli.org
src/: angry_generator.ml  dune  meta.ml
templates/: layout.html  list.html  recipe.html
to_try/: boeuf_aux_oignons.org
